--- a/app/src/main/res/layout/step_list_item.xml
+++ b/app/src/main/res/layout/step_list_item.xml
@@ -1,36 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
 
-    <TextView
-        android:id="@+id/preparation_steps_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/preparation_steps_label"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
 
     <TextView
-        android:id="@+id/step_count"
+        android:id="@+id/short_description_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_toEndOf="@id/preparation_steps_label"
-        android:layout_toRightOf="@id/preparation_steps_label"
-        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
-        tools:text="1" />
-
-    <TextView
-        android:id="@+id/description_text_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/preparation_steps_label"
         android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
         android:textStyle="italic"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="Do this and That" />
 
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
