--- a/app/src/main/res/layout/fragment_ingredients.xml
+++ b/app/src/main/res/layout/fragment_ingredients.xml
@@ -11,6 +11,7 @@
         tools:context=".IngredientsActivity">
 
         <TextView
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -18,19 +19,16 @@
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/servings_label"
-            android:textSize="14sp"
-            android:textStyle="italic"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
             android:id="@+id/servings_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
             android:layout_marginLeft="4dp"
-            android:textSize="14sp"
-            android:textStyle="italic"
             app:layout_constraintBaseline_toBaselineOf="@+id/textView"
             app:layout_constraintStart_toEndOf="@+id/textView"
             tools:text="8" />
