--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#0097a7</color>
     <color name="colorPrimaryDark">#006978</color>
     <color name="colorAccent">#514aac</color>
+    <color name="colorAccentLight">#8376de</color>
 </resources>
