--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="recipe_textview_margins">4dp</dimen>
     <dimen name="recipe_card_radius">8dp</dimen>
     <dimen name="default_layout_padding">8dp</dimen>
+    <dimen name="recipe_card_height">150dp</dimen>
 </resources>
