--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,10 @@
     <dimen name="recipe_card_radius">8dp</dimen>
     <dimen name="default_layout_padding">8dp</dimen>
     <dimen name="recipe_card_height">150dp</dimen>
+
+    <!--
+Refer to App Widget Documentation for margin information
+http://developer.android.com/guide/topics/appwidgets/index.html#CreatingLayout
+    -->
+    <dimen name="widget_margin">8dp</dimen>
 </resources>
